compelet my code #5

--- a/lab2-q2.ipynb
+++ b/lab2-q2.ipynb
@@ -813,6 +813,7 @@
     }
    ],
    "source": [
+    "#show total number of each type in dfo(the part that want to clean). \n",
     "dfo.applymap(type).stack().value_counts()"
    ]
   },
