--- a/lab2-q2.ipynb
+++ b/lab2-q2.ipynb
@@ -1130,315 +1130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Y</th>\n",
-       "      <th>X1</th>\n",
-       "      <th>X2</th>\n",
-       "      <th>X4</th>\n",
-       "      <th>X5</th>\n",
-       "      <th>X6</th>\n",
-       "      <th>X7</th>\n",
-       "      <th>X8</th>\n",
-       "      <th>X9</th>\n",
-       "      <th>X10</th>\n",
-       "      <th>X11</th>\n",
-       "      <th>X12</th>\n",
-       "      <th>X13</th>\n",
-       "      <th>X14</th>\n",
-       "      <th>X15</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>517.06</td>\n",
-       "      <td>9.233</td>\n",
-       "      <td>1.130</td>\n",
-       "      <td>7</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>504.06</td>\n",
-       "      <td>9.001</td>\n",
-       "      <td>1.129</td>\n",
-       "      <td>8</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.068</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>490.03</td>\n",
-       "      <td>9.246</td>\n",
-       "      <td>1.128</td>\n",
-       "      <td>8</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.054</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>39.6</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>7.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1443.08</td>\n",
-       "      <td>6.414</td>\n",
-       "      <td>1.146</td>\n",
-       "      <td>41</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0.187</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>7.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>517.06</td>\n",
-       "      <td>9.233</td>\n",
-       "      <td>1.130</td>\n",
-       "      <td>7</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>533.11</td>\n",
-       "      <td>8.740</td>\n",
-       "      <td>1.133</td>\n",
-       "      <td>10</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>37.7</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>477.50</td>\n",
-       "      <td>8.527</td>\n",
-       "      <td>1.128</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>46.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>548.59</td>\n",
-       "      <td>8.312</td>\n",
-       "      <td>1.132</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>43.9</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>7.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>511.72</td>\n",
-       "      <td>7.207</td>\n",
-       "      <td>1.145</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>36.6</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>2.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>515.60</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.126</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.072</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>46.2</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>25 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Y      X1     X2  X4    X5  X6     X7  X8   X9   X10   X11  X12  \\\n",
-       "0    517.06  9.233  1.130   7  16.0   4  0.067   4  0.0  12.0   2.0    4   \n",
-       "1    504.06  9.001  1.129   8  16.0   4  0.068   4  0.0  12.0   1.0    4   \n",
-       "2    490.03  9.246  1.128   8  16.0   3  0.054   4  0.0  12.0   1.0    4   \n",
-       "3   1443.08  6.414  1.146  41  20.0  42  0.187  14  0.0   6.0  13.0   17   \n",
-       "4    517.06  9.233  1.130   7  16.0   4  0.067   4  0.0  12.0   2.0    4   \n",
-       "..      ...    ...    ...  ..   ...  ..    ...  ..  ...   ...   ...  ...   \n",
-       "20   533.11  8.740  1.133  10  16.0   4  0.062   4  0.0   0.0   2.0    4   \n",
-       "21   477.50  8.527  1.128   5  21.0   5  0.083   3  0.0  18.0   3.0    4   \n",
-       "22   548.59  8.312  1.132   7  22.0   7  0.100   4  0.0  18.0   4.0    5   \n",
-       "23   511.72  7.207  1.145   6   9.0   5  0.067   3  0.0   6.0   3.0    2   \n",
-       "24   515.60  0.000  1.126   7   0.0   5  0.072   4  0.0  18.0   0.0    3   \n",
-       "\n",
-       "     X13  X14  X15  \n",
-       "0   39.3  3.6  7.1  \n",
-       "1   39.3  1.8  7.1  \n",
-       "2   39.6  1.9  7.5  \n",
-       "3   32.0  5.8  7.6  \n",
-       "4   39.3  3.6  7.1  \n",
-       "..   ...  ...  ...  \n",
-       "20  37.7  3.3  6.6  \n",
-       "21  46.4  5.4  7.1  \n",
-       "22  43.9  6.1  7.6  \n",
-       "23  36.6  4.2  2.8  \n",
-       "24  46.2  4.6  0.0  \n",
-       "\n",
-       "[25 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def parse(x):\n",
-    "    if type(x)== str:\n",
-    "        import re\n",
-    "        x_str=re.sub(x,'[0-9]','')\n",
-    "        if len(x_str)>=5:\n",
-    "            return  True\n",
-    "    return False\n",
-    "dfo2= dfo.loc[dfo.applymap(parse).sum(1)==0,dfo.applymap(parse).sum(0)==0]\n",
-    "\n",
-    "def parse_replace(x):\n",
-    "    try:\n",
-    "        return float(x)\n",
-    "    except:\n",
-    "        return 0\n",
-    "\n",
-    "\n",
-    "df2=pd.concat([df.select_dtypes(exclude='object'),dfo2.applymap(parse_replace)],1)[df.columns].fillna(0)\n",
-    "df2          \n",
-    "              \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calulate standardization and normalization(scaling)\n",
+    "#Calulate standardization( transforms data to have a mean of zero and a standard deviation of 1) and normalization(scale a variable to have a values between 0 and 1)\n",
     "x_standardization=lambda x: (x-x.mean())/x.std()\n",
     "x_normalization=lambda x: (x-x.mean())/(x.max()-x.min())\n",
     "#df2.apply(x_standardization).T.dropna(how='all').T"
@@ -1991,7 +1687,7 @@
     }
    ],
    "source": [
-    "#apply x_normalization\n",
+    "#apply x_normalization to the dataframe\n",
     "df2.loc[:,df2.std()>0].apply(x_normalization)"
    ]
   },
