--- a/lab2-q2.ipynb
+++ b/lab2-q2.ipynb
@@ -1648,13 +1648,13 @@
     "#Concat dfo2(the part of dataframe that got cleaned) with the rest clean part of data frame and fill nan values with zero\n",
     "df2=pd.concat([df_exclude,df_clean],1).fillna(0)\n",
     "#reorder column order based on original column order of dataframe\n",
-    "#columnsTitles =['Y','X1','X2','X4','X5','X6','X8','X10','X11','X13','X15']\n",
-    "#df2 = df2.reindex(columns=columnsTitles)\n",
     "cols = list(df2.columns)\n",
     "cols\n",
     "a, b = cols.index('X1'), cols.index('X2')\n",
     "cols[b], cols[a] = cols[a], cols[b]\n",
     "df2 = df2[cols]\n",
+    "\n",
+    "#final clean dataframe\n",
     "df2    "
    ]
   },
@@ -1664,7 +1664,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calulate standardization( transforms data to have a mean of zero and a standard deviation of 1) and normalization(scale a variable to have a values between 0 and 1)\n",
+    "#Calulate standardization( transforms data to have a mean of zero and a standard deviation of 1) \n",
+    "#Calculate normalization(scale a variable to have a values between 0 and 1)\n",
     "x_standardization=lambda x: (x-x.mean())/x.std()\n",
     "x_normalization=lambda x: (x-x.mean())/(x.max()-x.min())\n",
     "#df2.apply(x_standardization).T.dropna(how='all').T"
@@ -1905,7 +1906,7 @@
     }
    ],
    "source": [
-    "#apply x_standardization to dataframe\n",
+    "#apply x_standardization to clean dataframe (df2)\n",
     "df2.loc[:,df2.std()>0].apply(x_standardization)\n",
     "\n"
    ]
@@ -2145,7 +2146,7 @@
     }
    ],
    "source": [
-    "#apply x_normalization to the dataframe\n",
+    "#apply x_normalization to the clean dataframe(df2)\n",
     "df2.loc[:,df2.std()>0].apply(x_normalization)"
    ]
   }
