--- a/lab2-q2.ipynb
+++ b/lab2-q2.ipynb
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1900,20 +1900,21 @@
        "[25 rows x 11 columns]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#apply x_standardization to clean dataframe (df2)\n",
-    "df2.loc[:,df2.std()>0].apply(x_standardization)\n",
+    "standardization = df2.loc[:,df2.std()>0].apply(x_standardization)\n",
+    "standardization\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -2140,15 +2141,41 @@
        "[25 rows x 11 columns]"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#apply x_normalization to the clean dataframe(df2)\n",
-    "df2.loc[:,df2.std()>0].apply(x_normalization)"
+    "normalization = df2.loc[:,df2.std()>0].apply(x_normalization)\n",
+    "normalization"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardization.to_csv(\"Lab2-Q2-Rescaled.txt\", header=True, index=False, sep='\\t', mode='a')\n",
+    "normalization.to_csv(\"Lab2-Q2-Normalized.txt\",  header=True, index=False, sep='\\t', mode='a')\n",
+    "df2.to_csv(\"Final-Clean-Data.txt\",  header=True, index=False, sep='\\t', mode='a')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
